styles/imports/info-map.css
#info-map {
  position: relative;
  padding-bottom: 60px;
}

.map {
  width: 100%;
}

.pop-up {
  position: absolute;

  top: 10%;
  bottom: 10%;
  left: 10%;
  right: 10%;

  background: rgba(0, 0, 0, 0.8);

  padding: 5%;
  color: #f0eccf;
  border-radius: 10px;
}

.pop-up p {
  font-size: 130%;
}

.pop-up .glyphicon-remove {
  position: absolute;
  top: 10px;
  right: 10px;
  cursor: pointer;
}

#flip-cards {
  padding-top: 2em;
}

#flip-cards .back {
  background-color: rgba(0, 0, 0, 0.6);
  color: #f0eccf;
  font-size: 130%;
  padding: 5%;
  min-height: 100%;
}

.card {
  margin-bottom: 2em;
}

/*Extra small devices (mobile phones, 767px and below)*/
@media screen and (max-width: 767px) {
  /* TODO remove if unnecessary */
}

/*Small devices (landscape phones, 768px and up)*/
@media (min-width: 768px) and (max-width: 991px) {
  /*#info-map {
    transform: rotate(2deg);
  }*/
}

/*Medium devices (tablets, netbooks, 992px and up)*/
@media (min-width: 992px) and (max-width: 1199px) {
  #info-map {
    transform: rotate(2deg);
  }
}

/*Large devices (desktops, 1200px and up)*/
@media (min-width: 1200px) {
  #info-map {
    transform: rotate(2deg);
  }
}

